static/css/empdatabase/form.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");

:root {
  --primary_white: #ffffff;
  --secondary_white: #f3f4f5;
  --text_color: #222222;
  --attention_color: #c60f2d;
  --headingHover_color: #003666;
  --heading_txt: 2rem;
  --sub_heading_txt: 1.5rem;
  --normal_txt: 1rem;
  --small_txt: 0.875rem;
}

* {
  margin: 0px;
  padding: 0px;
}
/* section{
    background-color: #003666;
} */
.newcontain {
  width: 935px;
  height: 500px;
  background-color: white;
  overflow-y: auto;
  /* text-align: center; --- h-721px form.css master.css plotadd.css */
}
.heading {
  width: 935px;
  height: 30px;
  /* margin-left: 90px; */
  text-align: center;
  padding-top: 20px;
  padding-bottom: 20px;
  margin-top: 25px;
  font-family: "Poppins";
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 30px;
  letter-spacing: 0.02em;
  color: var(--headingHover_color);
}
div .headingss {
  width: 935px;
  height: 30px;
  margin-left: -90px;
  text-align: center;
  padding-top: 20px;
  padding-bottom: 20px;
  margin-top: 25px;
  font-family: "Poppins";
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 30px;
  letter-spacing: 0.02em;
  color: var(--headingHover_color);
}
.inputs {
  width: 771px;
  /* text-align: center; */
  margin-left: 90px;
  margin-top: 3%;
  font-family: "Poppins";
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 21px;
  letter-spacing: 0.02em;
}
.row input {
  width: 366px;
  height: 47px;
  /* text-align: center; */
  padding-left: 15px;
  border-radius: 4px;
  border: 0.5px solid black;
  margin-top: 10px;
}
.newdrop button {
  width: 765px;
  height: 47px;
  /* padding-left: 15px; */
  border-radius: 4px;
  border: 0.5px solid black;
  margin-top: 10px;
  margin-right: 10%;
}
.inp input {
  width: 765px;
  height: 47px;
  padding-left: 15px;
  border-radius: 4px;
  border: 0.5px solid black;
  margin-top: 10px;
}
.newcontain .submit_btn {
  margin-left: 25%;
  padding: 12.6851px 19.5156px 12.6851px 23.4187px;
  gap: 5.85px;
  width: 365.92px;
  height: 47.37px;
  background: var(--headingHover_color);
  border-radius: 3.90311px;
  color: white;
}
.newcontain .submit_btn:hover {
  border: 2px solid var(--headingHover_color);
  background: white;
  color: var(--headingHover_color);
}
.dropdown-menu > li {
  width: 765px;
}
.msg {
  width: 50%;
  text-align: center;
  color: var(--attention_color);
  background-color: white;
  padding: 0.5rem;
  border: 2px solid var(--headingHover_color);
  border-radius: 0.3rem;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.105);
  cursor: pointer;
  transition: 0.3s ease;
  margin-left: 25%;
  margin-top: 29px;
}

/* for plot allotment  */

/* 1. id details  */

.account-id {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 3rem;
  opacity: 0;
  pointer-events: none;
  transition: .3s ease;
}


.acc-container > input {
  outline: none;
  border: none;
  width: 400px;
  height: 40px;
  padding: 0.6rem 0.8rem;
  margin-top: 1rem;
  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.053);
  border-radius: 0.2rem;
}

.next-btn {
  border: none;
  outline: none;
  background: var(--headingHover_color);
  width: 200px;
  margin: 0 auto;
  padding: 0.5rem .8rem;
  color: white;
  cursor: pointer;
  margin-top: 1rem;
  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.053);
  border-radius: 0.2rem;
  transition: 0.3s ease;
}

.next-btn:hover {
  background-color: #00325d;
}
/* 2. plot details */

.plot-details {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -36%);
  display: flex;
  flex-direction: column;
  gap: 1rem;
  opacity: 0;
  pointer-events: none;
  transition: .3s ease;
}

.input-container{
    height: 388px;
    width: 80vw;
    overflow-y: auto;
    overflow-x: hidden;
    margin: 0 1rem;
  }
  .input-container .row{
    margin-left: 10%;
  }
.input-container select {
  width: 366px;
  height: 47px;
  padding-left: 15px;
  border-radius: 4px;
  border: 0.5px solid black;
  margin-top: 10px;
}

/* 3. account details */

.account-details {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -36%);
    display: flex;
    flex-direction: column;
    gap: 1rem;
    opacity: 0;
    pointer-events: none;
    transition: .3s ease;
  }

  .btn-container{
    display: flex;
    justify-content: center;
    gap: 1rem;
    margin-top: 2rem;
  }
  
.btn-container button{
    margin-top: 10px;
    margin-bottom: 20px;
    padding: .3rem 1rem;
    border: none;
    cursor: pointer;
    background-color: var(--headingHover_color);
    color: white;
    border-radius: .3rem;
}

.reset-btn{
    background-color: var(--attention_color) !important;
}

/* for next slide by js */
.next-slide{
    opacity: 1 ;
    pointer-events: all;
}

